--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [metadata]
 name = cp-nagios-plugins
-version = 1.0.11
+version = 0.2.dev.1
 description = Cross Platform Nagios Plugins
 long_description = file: README.rst
 keywords = nagios, plugins
 license = Apache 2.0
 license_file = LICENSE
 author = Hoplite Industries, Inc.
+author_email = smichael@hopliteindustries.com
 maintainer = Shawn Michael
 maintainer_email = smichael@hopliteindustries.com
 url = https://github.com/HopliteInd/cp-nagios-plugins
@@ -26,9 +27,14 @@ classifiers =
 zip_safe = True
 include_package_data = False
 packages = libnagios
+install_requires = 
+	psutil>=5.6.2
 
 [options.entry_points]
-console_scripts = check_disk = libnagios.checks.disk:run
+console_scripts = 
+	check_cp_disk = libnagios.checks.disk:run
+	check_cp_load = libnagios.checks.load:run
+	check_cp_cpu = libnagios.checks.cpu:run
 
 [options.packages.find]
 exclude =
