--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,73 @@
+[build-system]
+requires = [
+    "hatchling>=1.4.1",
+]
+build-backend = "hatchling.build"
+
+[project]
+name = "cp-nagios-plugins"
+description = "Cross Platform Nagios Plugins"
+readme = "README.md"
+license = "Apache 2.0"
+authors = [
+    { name = "Hoplite Industries, Inc.", email = "smichael@hopliteindustries.com" },
+]
+keywords = [
+    "nagios",
+    "plugins",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: No Input/Output (Daemon)",
+    "Intended Audience :: System Administrators",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Topic :: System :: Monitoring",
+]
+dependencies = [
+    "psutil>=5.6.2",
+]
+dynamic = [
+    "version",
+]
+
+[project.scripts]
+check_cp_bitlocker = "libnagios.checks.bitlocker:run"
+check_cp_cpu = "libnagios.checks.cpu:run"
+check_cp_disk = "libnagios.checks.disk:run"
+check_cp_load = "libnagios.checks.load:run"
+check_cp_swap = "libnagios.checks.swap:run"
+
+[project.urls]
+Homepage = "https://github.com/HopliteInd/cp-nagios-plugins"
+
+[tool.hatch.version]
+path = "libnagios/__init__.py"
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "/libnagios",
+]
+
+[tool.flake8]
+ignore = ['E203', 'D107']
+per-file-ignores = [
+    '__init__.py:F401',
+]
+max-line-length = 79
+count = true
+
+
+[tool.pylint.FORMAT]
+max-line-length = 79
+
+[tool.pylint.'MESSAGES CONTROL']
+disable = C0330, C0326
+
+
 [tool.black]
 line_length = 79
-
