--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,9 @@ Homepage = "https://github.com/HopliteInd/cp-nagios-plugins"
 [tool.hatch.version]
 path = "libnagios/__init__.py"
 
+#[tool.hatch.build]
+#ignore-vcs = true
+
 [tool.hatch.build.targets.sdist]
 include = [
     "/libnagios",
