--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,5 @@
 [build-system]
-requires = [
-    "hatchling>=1.4.1",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
@@ -9,6 +7,7 @@ name = "cp-nagios-plugins"
 description = "Cross Platform Nagios Plugins"
 readme = "README.md"
 license = "Apache-2.0"
+requires-python = ">=3.6"
 authors = [
     { name = "Hoplite Industries, Inc.", email = "smichael@hopliteindustries.com" },
 ]
@@ -26,6 +25,9 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
     "Topic :: System :: Monitoring",
 ]
 dependencies = [
