--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ classifiers = [
 dependencies = [
     "psutil>=5.6.2",
     "paramiko",
+    "rich-argparse"
+    "rich",
 ]
 dynamic = [
     "version",
