--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ classifiers = [
 dependencies = [
     "psutil>=5.6.2",
     "paramiko",
-    "rich-argparse"
+    "rich-argparse",
     "rich",
 ]
 dynamic = [
