Drop win32 dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ dependencies = [
     "paramiko",
     "rich-argparse",
     "rich",
-    "wmi; platform_system == 'Windows'",
-    "pywin32; platform_system == 'Windows'",
+    #"wmi; platform_system == 'Windows'",
+    #"pywin32; platform_system == 'Windows'",
 ]
 dynamic = [
     "version",
